static gateway and aggregate swagger